k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: portfolio

  annotations:
    cert-manager.io/cluster-issuer: letsencrypt

spec:
  ingressClassName: nginx

  rules:
    - host: etudiant-07-portfolio.development.atelier.ovh

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: portfolio
                port:
                  number: 80

  tls:
    - hosts:
        - etudiant-07-portfolio.development.atelier.ovh

      secretName: portfolio-tls
